# MLOps-1

./: pyproject.toml  setup.py
notebook/: mongo_db_demo.ipynb
src/components/: data_transformation.py
src/constants/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
