[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Zaeem Hassan", email = "zaeemhassan2004@gmail.com"}]
dependencies = [
    "boto3>=1.42.16",
    "botocore>=1.42.16",
    "certifi>=2025.11.12",
    "dill>=0.4.0",
    "fastapi>=0.127.1",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mypy-boto3-s3>=1.42.16",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymongo>=4.15.5",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
